--- a/online-coding-interviews/.gitignore
+++ b/online-coding-interviews/.gitignore
@@ -48,6 +48,9 @@ node_modules/
 npm-debug.log
 package-lock.json
 
+# Google Cloud SDK (local installation)
+google-cloud-sdk-tools/
+
 # Database
 *.db
 *.sqlite
